open-policy-agent/open-policy-agent/policy/psp-host-namespace/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spsphostnamespace
  annotations:
    description: Controls usage of host namespaces.
spec:
  crd:
    spec:
      names:
        kind: K8sPSPHostNamespace
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsphostnamespace
        violation[{"msg": msg, "details": {}}] {
            input_share_hostnamespace(input.review.object)
            msg := sprintf("Sharing the host namespace is not allowed: %v", [input.review.object.metadata.name])
        }
        violation[{"msg": msg, "details": {}}] {
            input_share_hostnamespace_deployment(input.review.object)
            msg := sprintf("Sharing the host namespace is not allowed: %v", [input.review.object.metadata.name])
        }
        input_share_hostnamespace(o) {
            o.spec.hostPID
        }
        input_share_hostnamespace(o) {
            o.spec.hostIPC
        }
        input_share_hostnamespace_deployment(o) {
            o.spec.template.spec.hostPID
        }
        input_share_hostnamespace_deployment(o) {
            o.spec.template.spec.hostIPC
        }
